--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,10 +1,8 @@
 .header_logo {
-  background: #232526;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #316B83;
 }
 
 .img_header {
-  width: 260px;
-  height: 80px; 
+  width: 480px;
+  height: 86px; 
 }
