--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -10,3 +10,65 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.searchBar {
+  display: flex;
+  justify-content: center;
+}
+
+.create_button {
+  width: 150px;
+  height: 45px;
+  margin-top: 28px;
+  color: #1EAE98;
+  border: 4px solid #1EAE98;
+  border-radius: 12px;
+  background: #ffff;
+}
+
+.create_button:hover {
+  width: 153px;
+  height: 48px;
+  background: #1EAE98;
+  color: #fff;
+  box-shadow: 0px 0px 4px 4px #1DB9C3;
+}
+
+.filter_box {
+  margin-bottom: 15px;
+}
+
+.select_filter {
+  width: 120px;
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border: 1px solid #A2CDCD;
+  color:#A2CDCD;
+}
+
+.select_filter:focus {
+  color:#A2CDCD;
+  outline: 1px solid #A2CDCD;
+}
+
+.filter_button {
+  width: 98px;
+  height: 40px;
+  background: #fff;
+  border: 4px solid #1EAE98;
+  border-radius: 6px;
+  color: #1EAE98;
+}
+
+.filter_button:hover {
+  width: 100px;
+  height: 43px;
+  background: #1EAE98;
+  color:#fff;
+  box-shadow: 0px 0px 4px 4px #1DB9C3;
+}
+
+.card_link {
+  text-decoration: none;
+}
