--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -7,8 +7,14 @@
 }
 
 .loading_gif {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  background: rgba(0, 0, 0, 0.8);
+  bottom: 180px;
 }
 
 .searchBar {
@@ -69,6 +75,16 @@
   box-shadow: 0px 0px 4px 4px #1DB9C3;
 }
 
+.home_cards {
+  display: flex;
+  justify-content: center;
+}
+
 .card_link {
   text-decoration: none;
+}
+
+.home_paging {
+  display: flex;
+  justify-content: center;
 }
